@@ -2,8 +2,8 @@
                           tipoftheday.cpp  -  tip of the day window
                              -------------------
     begin                : 27.12.2006
-    copyright            : (C) 2006 Heinz R. Hopfgartner 
-                           <heinz.hopfgartner@gmx.at>
+    copyright            : (C) 2006 Heinz R. Hopfgartner <heinz.hopfgartner@gmx.at>
+                           (C) 2007 Michal Rudolf <mrudolf@kdewebdev.org>
 ***************************************************************************/
 
 /***************************************************************************
@@ -14,73 +14,97 @@
  *   (at your option) any later version.                                   *
  *                                                                         *
  ***************************************************************************/
+
 #include "tipoftheday.h"
 #include "settings.h"
-#include <QTextStream>
 #include <QFile>
+#include <QTextStream>
 
 TipOfDayDialog::TipOfDayDialog(QWidget* parent) : QDialog(parent)
 {
-  tipDialog.setupUi(this);
+  ui.setupUi(this);
 
-  connect(tipDialog.nextTipButton, SIGNAL(clicked()), SLOT(slotNextTip()));
+  connect(ui.nextButton, SIGNAL(clicked()), SLOT(slotNextTip()));
+  connect(ui.previousButton, SIGNAL(clicked()), SLOT(slotPreviousTip()));
+  connect(this, SIGNAL(finished(int)), SLOT(slotSaveConfiguration()));
   loadTips();
-  tipDialog.tipBrowser->setText(this->readNextTip());
 }
 
 TipOfDayDialog::~TipOfDayDialog()
-{ 
-}
-
-void TipOfDayDialog::accept()
 {
-  AppSettings->beginGroup("/Tips/");
-  AppSettings->setValue("showTips", tipDialog.showTipOfDayCheckBox->isChecked());
-  AppSettings->endGroup();
-  QDialog::accept();
 }
 
 void TipOfDayDialog::slotNextTip()
 {
- tipDialog.tipBrowser->setText( this->readNextTip());
+  setCurrentTip(m_current + 1);
+  ui.tipBrowser->setText(currentTip());
 }
 
-QString TipOfDayDialog::readNextTip()
+void TipOfDayDialog::slotPreviousTip()
 {
-  if(tipsMap.isEmpty())
-    return tr("No tip found");
-  AppSettings->beginGroup("/Tips/");
-  int nextTip = AppSettings->value("next", 1).toInt();
-  if(nextTip == tipsMap.size())
-    AppSettings->setValue("next", 1);
-  else
-  AppSettings->setValue("next", nextTip + 1);
-  AppSettings->endGroup();
-  return tipsMap.value(nextTip);
+  setCurrentTip(m_current - 1);
+  ui.tipBrowser->setText(currentTip());
 }
 
-int TipOfDayDialog::loadTips()
+bool TipOfDayDialog::loadTips()
 {
   Q_INIT_RESOURCE(tipoftheday);
   QFile tipsFile(":tips.txt");
   if (!tipsFile.open(QIODevice::ReadOnly | QIODevice::Text))
-    return 1;
+    return false;
 
-  QTextStream in(&tipsFile);
-  QString line, key, value;
-  while (!in.atEnd()) {
-    line = in.readLine();
-    if(line.left(1) == "#")
-      { //skip line
-       }
-    else {
-      key = line.left(3);
-      value = line.mid(4, 10000);
-      tipsMap.insert(key.toInt(), value);
+  QTextStream tips(&tipsFile);
+  QString tip, s;
+  while (!tips.atEnd())
+  {
+    s = tips.readLine().trimmed();
+    if (!s.isEmpty())
+      tip += s + ' ';
+    else
+    {
+      if (!tip.isEmpty())
+        m_tips.append(tip);
+      tip = QString();
     }
   }
-
+  if (!tip.isEmpty())
+    m_tips.append(tip);
   tipsFile.close();
   Q_CLEANUP_RESOURCE(tipoftheday);
-  return 0;
+  return true;
+}
+
+QString TipOfDayDialog::currentTip() const
+{
+  if (m_current >= m_tips.count())
+    return tr("No tips available!");
+  return m_tips[m_current];
+}
+
+void TipOfDayDialog::setCurrentTip(int tip)
+{
+  if (!m_tips.count() || tip >= m_tips.count())
+    m_current = 0;
+  else if (tip < 0)
+    m_current = m_tips.count() - 1;
+  else m_current = tip;
+}
+
+void TipOfDayDialog::show()
+{
+  AppSettings->beginGroup("/Tips/");
+  ui.startupCheck->setChecked(AppSettings->value("showTips", true).toBool());
+  setCurrentTip(AppSettings->value("next", 0).toInt());
+  AppSettings->endGroup();
+  ui.tipBrowser->setText(currentTip());
+  QDialog::show();
+}
+
+void TipOfDayDialog::slotSaveConfiguration()
+{
+  AppSettings->beginGroup("/Tips/");
+  AppSettings->setValue("showTips", ui.startupCheck->isChecked());
+  setCurrentTip(m_current + 1);
+  AppSettings->setValue("next", m_current);
+  AppSettings->endGroup();
 }
